fix adaptive bugs on Iphone

--- a/src/adaptive.scss
+++ b/src/adaptive.scss
@@ -152,6 +152,10 @@
     height: 800px;
     overflow-y: auto;
   }
+  .presentation_page__main{
+    height: 700px;
+    overflow-y: auto;
+  }
   .footer{
     padding: 5px;
     margin-top: 40%;
